test/bad/b17.erl
-module(b17).

% bad function clause unification - 1

extract (1.0) -> 1.0;
extract (2.0) -> 1.0;
extract (true) -> true;
extract (false) -> false.